fix logo size on small screen

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -4,7 +4,7 @@
 }
 .logo {
   width:16%;
-  min-width: 145px;
+  min-width: 125px;
 }
 #footer .holder {
   width:91.5%;
